# RosDataConversion

./: .gitignore  README.md
bag_data_extraction/: CMakeLists.txt  manifest.xml  package.xml
bag_data_extraction/scripts/: image_test.py  lidar_snow_to_hdf5.py  read_pointcloud2.py
bag_data_extraction/src/: save_bag_pointclouds.cpp
bag_pointcloud2_converter/: CMakeLists.txt  mainpage.dox  manifest.xml
bag_pointcloud2_converter/src/: bag_hokuyo_to_csv.cpp  bag_pointcloud2_to_csv.cpp
data_extraction/: CMakeLists.txt
data_extraction/src/: inertial_measurements_extractor.cpp  roll_pitch_yaw_extractor.cpp
published_data_extraction/: CMakeLists.txt  mainpage.dox  manifest.xml
published_data_extraction/src/: wheels_measurements_to_csv.cpp
